fix: market price overlapping on the mobile

--- a/web/src/mobile/styles/components/CreateOrder.pcss
+++ b/web/src/mobile/styles/components/CreateOrder.pcss
@@ -4,7 +4,6 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  margin-bottom: 4px;
   width: 100%;
 
   .cr-locked {
@@ -12,14 +11,9 @@
   }
 
   &__row-double {
-    align-items: flex-start;
     background: var(--body-background-color);
-    display: flex;
-    flex-direction: row;
     height: max-content;
     max-height: 400px;
-    justify-content: space-between;
-    width: 100%;
   }
 
   .pg-mobile-orders {
@@ -34,7 +28,6 @@
     flex-direction: column;
     height: 100%;
     justify-content: center;
-    padding: 12px;
     width: 50%;
   }
 
@@ -93,7 +86,6 @@
         position: sticky;
         top: 0;
         width: 100%;
-        width: calc(50vw - 24px);
 
         tr {
           align-items: center;
