--- a/web/src/screens/SetupScreen/SetupScreen.pcss
+++ b/web/src/screens/SetupScreen/SetupScreen.pcss
@@ -134,7 +134,6 @@
       color: var(--setup-markets-button-color);
       font-size: 14px;
       font-weight: bold;
-      padding: 12px;
       letter-spacing: 0.04em;
       width: 75px;
 
